# late-sh-themes-contribute

./: CONTEXT.md  Cargo.toml  Dockerfile  MUSIC.md  Makefile  docker-compose.monitoring.yml  docker-compose.yml
.github/workflows/: deploy.yml  deploy_infra.yml  deploy_web.yml
infra/: ipv6-proxy.tf  ssh-tcp.tf
infra/liquidsoap/: ambient.m3u  lofi.m3u
late-cli/: Cargo.toml  README.md
late-cli/src/: config.rs  identity.rs  main.rs  pty.rs  ssh.rs  ws.rs
late-core/migrations/: 032_create_bonsai_daily_care.sql  033_reset_bonsai.sql  034_create_game_rooms.sql
late-core/src/models/: blackjack.rs  bonsai.rs  chat_room.rs  chips.rs  game_room.rs  leaderboard.rs  mod.rs  profile.rs  user.rs
late-core/tests/: bonsai.rs
late-ssh/: Cargo.toml
late-ssh/src/: api.rs  main.rs  metrics.rs  session.rs  ssh.rs  state.rs
late-ssh/src/app/: input.rs  mod.rs  render.rs  state.rs  tick.rs
late-ssh/src/app/ai/: ghost.rs
late-ssh/src/app/artboard/: CONTEXT.md
late-ssh/src/app/bonsai/: care.rs  mod.rs  modal_input.rs  modal_ui.rs  state.rs  svc.rs  ui.rs
late-ssh/src/app/chat/: CONTEXT.md  input.rs  state.rs  svc.rs  ui.rs  ui_text.rs
late-ssh/src/app/chat/discover/: state.rs  ui.rs
late-ssh/src/app/chat/news/: state.rs
late-ssh/src/app/common/: composer.rs  mod.rs  primitives.rs  sidebar.rs  theme.rs
late-ssh/src/app/common/qr/: barcode.rs  mod.rs  polarity.rs  widget.rs
late-ssh/src/app/dashboard/: input.rs  ui.rs
late-ssh/src/app/games/: input.rs  mod.rs  ui.rs
late-ssh/src/app/games/chips/: svc.rs
late-ssh/src/app/games/nonogram/: state.rs
late-ssh/src/app/help_modal/: data.rs  input.rs  mod.rs  state.rs  ui.rs
late-ssh/src/app/profile/: input.rs  state.rs  ui.rs
late-ssh/src/app/profile_modal/: input.rs  ui.rs
late-ssh/src/app/rooms/: CONTEXT.md  filter.rs  input.rs  mock.rs  mod.rs  state.rs  svc.rs  ui.rs
late-ssh/src/app/rooms/blackjack/: input.rs  manager.rs  mod.rs  player.rs  settings.rs  state.rs  svc.rs  ui.rs
late-ssh/src/app/settings_modal/: input.rs  state.rs  ui.rs
late-ssh/src/app/welcome_modal/: data.rs  input.rs  state.rs  ui.rs
late-ssh/tests/: app_dashboard_flow.rs  app_input_flow.rs  ssh_smoke.rs
late-ssh/tests/chat/: svc.rs
late-ssh/tests/helpers/: mod.rs
late-ssh/tests/profile/: svc.rs  ui_flow.rs
late-web/src/pages/: app.html
late-web/src/pages/connect/: page.html
late-web/src/pages/gallery/: page.html
late-web/static/: site.webmanifest  style.css
scripts/: fetch_cc_music.py  run_local_cli_native.ps1  run_local_cli_native.sh  run_prod_cli.sh  run_prod_cli_native.ps1  run_prod_cli_native.sh
