[workspace]
members = [
    "late-cli",
    "late-core",
    "late-ssh",
    "late-web",
]
resolver = "2"

[workspace.dependencies]
# Core Utils
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.10", features = ["serde", "v7"] }

# Async / Runtime
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web / HTTP
axum = "0.8.8"
reqwest = "0.13.1"
tower-http = "0.6.8"

# Database
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }

# Telemetry
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry-http = "0.31.0"
tracing-opentelemetry = "0.32.1"
opentelemetry-appender-tracing = "0.31.1"
askama = "0.15.1"
async-stream = "0.3"
base64 = "0.22"
bytes = "1"
cpal = "0.16"
crossterm = "0.29"
deadpool-postgres = "0.14"
emojis = "0.7"
futures-util = "0.3"
image = "0.25.9"
ipnet = "2.11"
late-core = { path = "late-core", default-features = false }
nix = "0.29.0"
qrcodegen = "1.8.0"
rand_core = "0.6"
ratatui = "0.30"
rstest = "0.26.1"
rumenx-sudoku = "1.0.0"
russh = "0.59.0"
rustfft = "6.4.1"
shlex = "1.3.0"
symphonia = "0.5.5"
testcontainers = "0.26.3"
tokio-tungstenite = "0.28"
tower = "0.5"
unicode-width = "0.2"
vte = "0.15"

[profile.release]
# Strip debug info but keep symbols for readable panic stack traces
strip = "debuginfo"

# Use Thin LTO for a balance of compilation speed and runtime performance
lto = "thin"
