[package]
name = "late-cli"
version = "0.1.0"
edition = "2024"

[features]
default = []
otel = []

[[bin]]
name = "late"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
cpal.workspace = true
crossterm.workspace = true
futures-util.workspace = true
rand_core.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
russh.workspace = true
rustfft.workspace = true
shlex.workspace = true
symphonia = { workspace = true, features = ["mp3"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["term", "process", "signal", "fs"] }
