[package]
name = "late-ssh"
version = "0.1.0"
edition = "2024"

[features]
default = []
otel = ["late-core/otel", "opentelemetry", "tracing-opentelemetry", "opentelemetry-http"]

[dependencies]
late-core.workspace = true

# Core Utils
anyhow = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
ipnet.workspace = true

# Async Runtime
tokio = { workspace = true }

# Database
tokio-postgres = { workspace = true }
crossterm.workspace = true
ratatui.workspace = true
unicode-width.workspace = true
emojis.workspace = true
rand_core = { workspace = true, features = ["std"] }
base64.workspace = true
vte.workspace = true
russh.workspace = true

# Web / HTTP
axum = { workspace = true, features = ["ws"] }
reqwest = { workspace = true, features = ["json"] }
tower-http = { workspace = true, features = ["cors", "trace"] }
qrcodegen.workspace = true
rumenx-sudoku.workspace = true

# Telemetry (optional — gated behind "otel" feature)
opentelemetry = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry-http = { workspace = true, optional = true }

[dev-dependencies]
late-core = { workspace = true, features = ["testing"] }
rstest.workspace = true
